adds twilio authy

--- a/app/views/welcome/landing.html.erb
+++ b/app/views/welcome/landing.html.erb
@@ -19,6 +19,7 @@
 			      <li><a onclick="$('header').animatescroll({padding:71});">Home</a></li>
 			      <li><a onclick="$('.detail').animatescroll({padding:71});">Demo</a></li>
 			      <li><a onclick="$('.features').animatescroll({padding:71});">Features</a></li>
+						<li><%= link_to 'Login', new_user_path %></li>
 			    </ul>
 			  </div>
 		  </div>
